syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "exc8/pb";

package models;

// Messages

// todo implement messages
//
// message MyMessage {
//  ....
// }

message Drink {
  int32 id = 1;
  string name = 2;
  float price = 3;
  string description = 4;
}

message Drinks {
  repeated Drink drinks = 1;
}


message Order {
  int32 drink_id = 1;
  int32 quantity = 2;
}

message Orders {
  repeated Order items = 1;
}


// Generate go files with:
// Execute `generate_pb.sh`

// Define the service
service OrderService {
  // todo define rpc functions
  rpc GetDrinks (google.protobuf.Empty) returns (Drinks);
  rpc OrderDrink (Order) returns (google.protobuf.BoolValue);
  rpc GetOrders (google.protobuf.Empty) returns (Orders);
}
